--- a/py_course/assignment.ipynb
+++ b/py_course/assignment.ipynb
@@ -2545,7 +2545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2564,8 +2564,8 @@
     "if ord(a[0])==ord(a[-1])-1:\n",
     "    res=a[-1]+a[1:-1]+a[0]\n",
     "    print(res)\n",
-    "    \n",
-    "elif ord(a[0])!=ord(a[-1])-1:\n",
+    "else:\n",
+    "    ord(a[0])!=ord(a[-1])-1\n",
     "    res=a[0:-1]+chr(ord(a[0])+1)\n",
     "    print(res)\n",
     "\n",
