--- a/py_course/flow_control_statements/1.Decisional&Conditional_statements/5.match_case.ipynb
+++ b/py_course/flow_control_statements/1.Decisional&Conditional_statements/5.match_case.ipynb
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "no match case found\n"
+      "hello\n"
      ]
     }
    ],
@@ -70,9 +70,9 @@
     "# a=[10|100]\n",
     "# a=[10]\n",
     "# a=100\n",
-    "# a=[10,50]\n",
+    "a=[10,50]\n",
     "# a=[10,90]\n",
-    "a=[100,10]\n",
+    "# a=[100,10]\n",
     "# a=[10,60]\n",
     "match a:\n",
     "    case [10|100,50|60]:\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -163,27 +163,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
+      "False\n",
       "True\n"
      ]
     }
    ],
    "source": [
-    "#wap to check given character is alphabet or not , if alphabet display true , if  not false using turnary  operater\n",
-    "\n",
+    "#wap to check given character is alphabet or not ,\n",
+    "#if alphabet display true , if  not false using turnary  operater\n",
+    "a='$'\n",
     "a=[False,True]['a'<=a<='z' or 'A'<=a<='Z']\n",
     "print(a)\n",
     "####\n",
     "a='a'\n",
     "print(True) if 'a'<=a<='z' or 'A'<=a<='Z' else print(False)\n",
-    "##\n"
+    "##"
    ]
   },
   {
