--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
@@ -165,6 +165,173 @@
     "        print(\"*\",end=' ' )\n",
     "    print(\"*\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract each and every character from string using for loop\n",
+    "st='hello'\n",
+    "for i in st:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\flow_control_statements\\2.itaration&Looping_statements\\For_loop\\practice.ipynb Cell 8\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/Documents/GitHub/BASIC_PYTHON/py_course/flow_control_statements/2.itaration%26Looping_statements/For_loop/practice.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m a\u001b[39m=\u001b[39m\u001b[39m9\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/Documents/GitHub/BASIC_PYTHON/py_course/flow_control_statements/2.itaration%26Looping_statements/For_loop/practice.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m a:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/Documents/GitHub/BASIC_PYTHON/py_course/flow_control_statements/2.itaration%26Looping_statements/For_loop/practice.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mprint\u001b[39m(i)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "a=9\n",
+    "for i in a:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "None\n",
+      "(10, 20)\n",
+      "True\n",
+      "[10, 20]\n",
+      "{10: 20}\n",
+      "{2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract each data item  from the collection using for loop\n",
+    "l=[10,20,30,None,(10,20,),True,[10,20],{10:20},{3,2,4}]\n",
+    "for i in l:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "None\n",
+      "(10, 20)\n",
+      "True\n",
+      "[10, 20]\n",
+      "{10: 20}\n",
+      "{2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=(10,20,30,None,(10,20,),True,[10,20],{10:20},{3,2,4})\n",
+    "for i in l:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "True\n",
+      "b'101'\n",
+      "10\n",
+      "(10, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "l={10,None,(10,20,),True,b'101'}\n",
+    "for i in l:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "(10, 39)\n",
+      "['dsf', 'jkl']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l={10:20,30:(10,39),80:['dsf','jkl']}\n",
+    "for i in l:\n",
+    "    print(l[i])#values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "30\n",
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "l={10:20,30:(10,39),80:['dsf','jkl']}\n",
+    "for i in l:\n",
+    "    print(i)#keys"
+   ]
   }
  ],
  "metadata": {
