--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1709,6 +1709,47 @@
     "else:\n",
     "    print(\"string is not available\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2395244149312\n",
+      "[10, 20, 30]\n",
+      "2395244149312\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to eliminate the dublicate data items in given collection\n",
+    "l=[10,20,10,30,10]\n",
+    "print(id(l))\n",
+    "count=0\n",
+    "s=l.copy()\n",
+    "e=[]\n",
+    "for i in range(len(l)):\n",
+    "    if s[i] not in e:\n",
+    "        e+=[s[i]]\n",
+    "    else:\n",
+    "        del(l[i-count])\n",
+    "        count+=1\n",
+    "print(l)\n",
+    "print(id(l))\n",
+    "#what if we have 4GB of data eliments and all are unik \n",
+    "# and we have 5GB of storage only.  \"storage problem\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
