--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
@@ -1739,9 +1739,7 @@
     "        del(l[i-count])\n",
     "        count+=1\n",
     "print(l)\n",
-    "print(id(l))\n",
-    "#what if we have 4GB of data eliments and all are unik \n",
-    "# and we have 5GB of storage only.  \"storage problem\""
+    "print(id(l))"
    ]
   },
   {
