--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
@@ -1712,16 +1712,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2395244149312\n",
+      "2395243398144\n",
       "[10, 20, 30]\n",
-      "2395244149312\n"
+      "2395243398144\n"
      ]
     }
    ],
@@ -1744,10 +1744,331 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 6, 5, 8, 3]\n",
+      "[1, 2, 4, 4, 1, 2, 6, 6, 5, 6, 1, 8, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=[1,2,4,4,1,2,6,1,2,6,6,5,6,1,8,2,3]\n",
+    "uni=[]\n",
+    "for i in st:\n",
+    "    if i not in uni:\n",
+    "        uni+=[i]\n",
+    "print(uni)\n",
+    "n=3\n",
+    "for j in uni:\n",
+    "    count=0\n",
+    "    for k in range(len(st)):\n",
+    "        if j==st[k]:\n",
+    "            count+=1\n",
+    "        if count==n:\n",
+    "            del st[k]\n",
+    "            break\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 4, 1, 2, 6, 1, 2, 6, 5, 6, 1, 8, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to delete the each data item nth occurense values in given collection\n",
+    "st=[1,2,4,4,1,2,6,1,2,6,6,5,6,1,8,2,3]\n",
+    "sp=6\n",
+    "n=3\n",
+    "count=0\n",
+    "for i in range(0,len(st)):\n",
+    "    if sp==st[i]:\n",
+    "        count+=1\n",
+    "    if count==n:\n",
+    "        del st[i]\n",
+    "        break\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iphone iwatch pad\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to delete the each data item nth occurense values in given collection\n",
+    "st='iphone iwatch ipad'\n",
+    "sp='i'\n",
+    "s=''\n",
+    "n=3\n",
+    "count=0\n",
+    "for i in range(0,len(st)):\n",
+    "    if sp!=st[i]:\n",
+    "        s+=st[i]\n",
+    "    else:\n",
+    "        if st[i]==sp:\n",
+    "            count+=1\n",
+    "            if count!=n:\n",
+    "                s+=st[i]\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 4, 4, 1, 2, 6, 2, 6, 6, 5, 6, 1, 8, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=[1,2,4,4,1,2,6,1,2,6,6,5,6,1,8,2,3]\n",
+    "sp=1\n",
+    "s=()\n",
+    "n=3\n",
+    "count=0\n",
+    "for i in range(0,len(st)):\n",
+    "    if sp!=st[i]:\n",
+    "        s+=(st[i],)\n",
+    "    else:\n",
+    "        if st[i]==sp:\n",
+    "            count+=1\n",
+    "            if count!=n:\n",
+    "                s+=(st[i],)\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 4, 4, 1, 2, 6, 1, 2, 6, 5, 6, 1, 8, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=(1,2,4,4,1,2,6,1,2,6,6,5,6,1,8,2,3)\n",
+    "sp=6\n",
+    "n=3\n",
+    "count=0\n",
+    "for i in range(0,len(st)):\n",
+    "    if sp==st[i]:\n",
+    "        count+=1\n",
+    "    if count==n:\n",
+    "        st=st[0:i]+st[i+1:]\n",
+    "        break\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#wap to delete specific data item nth occurense value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(22.5+5j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap sum of data items in given collection\n",
+    "st=[1,2,'three',None,4,5.5,9+5j,True,[1,2,3]]\n",
+    "sum=0\n",
+    "for i in st:\n",
+    "    if type(i) in (int,float,complex,bool):\n",
+    "        sum+=i\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(22.5+5j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap sum of data items in given collection\n",
+    "st=[1,2,'three',None,4,5.5,9+5j,True,[1,2,3]]\n",
+    "if type(st) in [list,tuple,set]:\n",
+    "    sum=0\n",
+    "    for i in st:\n",
+    "        if type(i) in [int,float,complex,bool]:\n",
+    "            sum+=i\n",
+    "    print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='abc156cde123'\n",
+    "#o/p: 18\n",
+    "sum=0\n",
+    "for i in st:\n",
+    "    if  '0'<=i<='9':\n",
+    "        sum+= int(i)\n",
+    "\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "279\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='abc156cde123.'\n",
+    "sum=''\n",
+    "sum1=0\n",
+    "i=1\n",
+    "for i in st:\n",
+    "    if '0'<=i<='9':\n",
+    "        sum+=i\n",
+    "    else :\n",
+    "        if len(sum)>0:\n",
+    "            sum1=sum1+int(sum)\n",
+    "            sum=''\n",
+    "if len(sum)>0:\n",
+    "    sum1=sum1+int(sum)\n",
+    "print(sum1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='abc326cde125efg'\n",
+    "#o/p: 46\n",
+    "res=''\n",
+    "pro=1\n",
+    "sum=0\n",
+    "for i in st:\n",
+    "    if '0'<=i<='9':\n",
+    "        pro*=int(i)\n",
+    "        res=str(pro)\n",
+    "    else:\n",
+    "        if len(res)>0:\n",
+    "            sum+=int(res)\n",
+    "            res=''\n",
+    "            pro=1\n",
+    "if len(res)>0:\n",
+    "    sum+=int(res)\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "#febonacci series\n",
+    "a=0\n",
+    "b=1\n",
+    "res=0\n",
+    "for i in range(10):\n",
+    "    if i<=1:\n",
+    "        print(i)\n",
+    "    else:\n",
+    "        res=a+b\n",
+    "        print(res)\n",
+    "        a,b=b,res"
+   ]
   }
  ],
  "metadata": {
