--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -779,6 +779,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "654321"
+     ]
+    }
+   ],
+   "source": [
+    "n=123456\n",
+    "while n>0:\n",
+    "    print(n%10,end='')\n",
+    "    n=n//10"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
    "outputs": [
