--- a/py_course/functional_pro/functions.ipynb
+++ b/py_course/functional_pro/functions.ipynb
@@ -2,22 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50\n"
+      "start\n",
+      "52\n",
+      "stop\n"
      ]
     }
    ],
    "source": [
+    "print('start')\n",
     "def add(x,y):\n",
     "    z=x+y\n",
     "    return z\n",
-    "print(add(30,22))\n"
+    "print(add(30,22))\n",
+    "print('stop')"
    ]
   }
  ],
