--- a/py_course/functional_pro/functions.ipynb
+++ b/py_course/functional_pro/functions.ipynb
@@ -23,6 +23,37 @@
     "print(add(30,22))\n",
     "print('stop')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyTHOn\n",
+      "pyTHOn\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def imran():\n",
+    "    st='PYthoN'\n",
+    "    res=''\n",
+    "    for i in st:\n",
+    "        if 'A'<=i<='Z':\n",
+    "            res+=chr(ord(i)+32)\n",
+    "        elif 'a'<=i<='z':\n",
+    "            res+=chr(ord(i)-32)\n",
+    "        else:\n",
+    "            res+=i\n",
+    "    print(res)\n",
+    "imran()\n",
+    "print(imran())\n"
+   ]
   }
  ],
  "metadata": {
