--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -2461,7 +2461,7 @@
     }
    ],
    "source": [
-    "#wap to convert given string to tittle case\n",
+    "#wap to convert given string to title case\n",
     "#each word starting character should be uppercase\n",
     "#after ascii num char and special char the next character should in uppercase\n",
     "#tha last character should be lowercase\n",
