--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/assignment.ipynb
@@ -645,20 +645,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
    "source": [
-    "#30.wap to print first occurense of a character in a string"
+    "#30.wap to print first occurense of a character in a string\n",
+    "st='imran khan'\n",
+    "uni={}\n",
+    "for i in st:\n",
+    "    if i not in uni:\n",
+    "        uni[i]=1\n",
+    "    else:\n",
+    "        print(i)\n",
+    "        break\n",
+    "# print(uni)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n 2\n"
+     ]
+    }
+   ],
    "source": [
-    "#31.wap to print last occurense of a character in a string"
+    "#31.wap to print last occurense of a character in a string\n",
+    "st='imran khan'\n",
+    "# st='abababcccddd'\n",
+    "uni={}\n",
+    "u_list=''\n",
+    "for i in st:\n",
+    "    if i not in uni :\n",
+    "        uni[i]=1\n",
+    "        u_list=i+u_list\n",
+    "    else:\n",
+    "        uni[i]+=1\n",
+    "# print(uni)\n",
+    "# print(u_list)\n",
+    "num=0\n",
+    "res=''\n",
+    "for i in u_list:\n",
+    "    if uni[i]>num:\n",
+    "        num=uni[i]\n",
+    "        res=i\n",
+    "print(res,num)\n"
    ]
   },
   {
@@ -695,6 +739,68 @@
    "outputs": [],
    "source": [
     "#35.wap to remove last occurense of a character in a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'l': 5, 'a': 2, 'i': 1, 't': 1, 'h': 1, 'k': 1, 'u': 1, 'm': 1, 'r': 1}\n",
+      "['r', 'm', 'u', 'k', 'h', 't', 'i', 'a', 'l']\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "#30. WAP to Print Last Occurrence of a Character in a String.\n",
+    "l=\"lalithkumar\"\n",
+    "d={}\n",
+    "for i in l:\n",
+    "    if i not in d:\n",
+    "        d[i]=1\n",
+    "    else:\n",
+    "        d[i]+=1\n",
+    "print(d)\n",
+    "s=list(d)\n",
+    "print(s[::-1])\n",
+    "for j in s[::-1]:\n",
+    "    if d[j]>1:\n",
+    "        print(j)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l\n",
+      "l\n",
+      "l\n",
+      "l\n",
+      "l\n",
+      "l\n",
+      "l\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=\"lalithkumarllllllll\"\n",
+    "for i in range(len(l)):\n",
+    "    for j in range(i+1,len(l)):\n",
+    "        if l[i]==l[j]:\n",
+    "            print(l[i])\n",
+    "        break\n",
+    "    # break"
    ]
   }
  ],
