--- a/py_course/functional_pro/dir_str.ipynb
+++ b/py_course/functional_pro/dir_str.ipynb
@@ -455,6 +455,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "ab='I 457'\n",
+    "print(ab.isupper())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
    "outputs": [
@@ -484,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +518,7 @@
        "True"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
