--- a/py_course/functional_pro/dir_str.ipynb
+++ b/py_course/functional_pro/dir_str.ipynb
@@ -537,6 +537,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='123abc'\n",
+    "print(st.isalnum())\n",
+    "def u_isalnum(coll):\n",
+    "    for i in coll:\n",
+    "        if not('0'<=i<='9' or 'a'<=i<='z' or 'A'<=i<='Z'):\n",
+    "            return False\n",
+    "    return True\n",
+    "print(u_isalnum(st))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 130,
    "metadata": {},
    "outputs": [
@@ -564,6 +589,134 @@
     "            return False\n",
     "    return True\n",
     "print(u_isnumeric(st))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "while i<=10:\n",
+    "    if i==5:\n",
+    "        i+=1\n",
+    "        continue\n",
+    "    print(i)\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#isspace()\n",
+    "# st='sdfsv ds    dsf'\n",
+    "# st=''\n",
+    "st=' '\n",
+    "print(st.isspace())\n",
+    "def u_isspace(coll):\n",
+    "    if len(coll)==0:\n",
+    "        return False\n",
+    "    for i in coll:\n",
+    "        if  i!=' ':\n",
+    "            return False\n",
+    "    return True\n",
+    "print(u_isspace(st))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#isidentifier()\n",
+    "# st='2sdfj'\n",
+    "st='_jklj'\n",
+    "print(st.isidentifier())\n",
+    "def u_isidentifier(coll):\n",
+    "    if '0'<=coll[0]<='9':\n",
+    "        return False\n",
+    "    for i in coll:\n",
+    "        if not('A'<=i<='Z' or 'a'<=i<='z' or '0'<=i<='9' or i=='_'):\n",
+    "            return False\n",
+    "    return True\n",
+    "print(u_isidentifier(st))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcds\n",
+      "a-b-c-d-s\n"
+     ]
+    }
+   ],
+   "source": [
+    "#join()\n",
+    "# st=['a','b','c','d','s',10]\n",
+    "# st=['abc','bcd','cdef','defg','stuv']\n",
+    "st=['a','b','c','d','s']\n",
+    "\n",
+    "print(''.join(st))\n",
+    "# print('*'.join(st))\n",
+    "# print('-*'.join(st))\n",
+    "def join(coll,sep=''):\n",
+    "    for i in coll:\n",
+    "        if type(i)!=str:\n",
+    "            return False\n",
+    "    res=''\n",
+    "    for i in coll:\n",
+    "        res=res+i+sep\n",
+    "    if sep=='':\n",
+    "        return res\n",
+    "    else:\n",
+    "        return res[:-(len(sep))]\n",
+    "print(join(st,'-'))"
    ]
   }
  ],
