--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
@@ -1418,20 +1418,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "square of 4 is: 25\n"
+      "square is: 25\n"
      ]
     }
    ],
    "source": [
     "s=lambda n:n*n\n",
-    "print(\"square of 4 is:\",s(5))\n"
+    "print('square is:',s(5))\n"
    ]
   },
   {
