--- a/py_course/functional_pro/functions.ipynb
+++ b/py_course/functional_pro/functions.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "def mul(a,b): #missing positional arg's\n",
+    "def mul(a,b): #missing positional arg's a,b\n",
     "    c=a*b\n",
     "    print(c)\n",
     "mul()"
